--- a/WebSite/3inRow/3inRow.css
+++ b/WebSite/3inRow/3inRow.css
@@ -12,8 +12,7 @@
    margin: 20px;
    float: left;
    transition: all 0.3s;
-   background: aqua;
-      
+   background: rgb(250,250,250);
 }
 .g_circle {
    padding-top: 132px;
@@ -34,8 +33,18 @@ h1, h3 {
    text-align: center;
 }
 
+h1 {
+   padding: 15px;
+   padding-top: 40px;
+}
+
 .g_gameOverMessage {
    background: gray;
+   top: 400px;
+   position: fixed;
+   width: 100%;
+   padding: 10px;
+   transition: all 1s;
 }
    .g_gameOverMessage .message {
       font-size : 130%;
